	ebuild_T type, a vars_T derivative that overrides set_defaults() in
	order to set ${PN}, ${P}, ${PV}, etc.
	* src/metadata.cc, src/action_meta_handler.cc: Update to use new
	ebuild_T instead of vars_T.  Also fixed a bug in cases where there's
	no HOMEPAGE or <longdescription>/DESCRIPTION specified; in --quiet
	mode, it should display "none" instead of nothing, which it failed to
	do before.
	* tests/expected/metadata, tests/expected/metadata-regex: Update
	metadata expected files with the missing none's (bug mentioned above).
	* tests/glob-test.sh, tests/expected/glob, tests/src/glob-test.cc,
	tests/src/Makefile.am: Added glob-test for testing pattern matching
	via util::glob_T.

2005-09-03 Aaron Walker <ka0ttic@gentoo.org>

	* lib/*: Break up everything.  All convenience libs are now located in
	herdstat/LIB.  utility stuff in herdstat/util, portage stuff in
	herdstat/portage, etc.
	* herdstat/exceptions.hh: Moved base exceptions here.
	* src/*: update include paths, etc.
	* Makfile.am.common: Added a common Makefile.am which is now include'd
	by all other Makefile.am's.
	* herdstat/noncopyable.hh, herdstat/cachable.hh: Added some new
	abstract types.  The latter replaces util::cache_T.
	* src/pkgcache.hh, src/pkgcache.cc, src/metacache.hh,
	src/metacache.hh: update to use new cachable type.

2005-09-01 Aaron Walker <ka0ttic@gentoo.org>

	* options.cc, options.hh: Clean up a little.

2005-08-31 Aaron Walker <ka0ttic@gentoo.org>

	* src/xmlparser.cc, src/xmlparser.hh: xml::init should only be
	instantiated once, not once per XMLParser_T instantiation, and
	therefore needs to be static.  This change probably fixes some subtle
	bugs.

2005-08-30 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.1_p6).
	* lib/vars.cc: Add check to subst() member so that variable
	substitution does not occur when encountering stuff like
	"var=...${var}", preventing possible inf loops, bug #104190.
	* lib/file.cc, lib/file.hh: inline is_file() and is_dir().